<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Autostarts</string>

    <string name="no_receivers">No applications are autostarting.</string>
    <string name="no_receivers_filtered">No applications are autostarting within your current selection.</string>
    <string name="change_filter_settings">Change filter settings.</string>
    <string name="no_search_match">No applications match your search query.</string>
    <string name="appliation_info">Application Info</string>
    <string name="find_in_market">Find on Google Play</string>
    <string name="find_in_appstore">Find in Appstore</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="view_options">View</string>
    <string name="group_by_package">Group by application</string>
    <string name="group_by_action">Group by event</string>
    <string name="hide_sys_apps">Hide system apps</string>
    <string name="show_enabled_only">Show enabled only</string>
    <string name="show_changed_only">Show changed only</string>
    <string name="hide_unknown">Hide unknown events</string>
    <string name="expand_all">Expand all</string>
    <string name="collapse_all">Collapse all</string>
    <string name="reload">Reload</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="receiver_info">Receiver &lt;b&gt;%1$s&lt;/b&gt; handles action &lt;i&gt;%2$s&lt;/i&gt; with priority &lt;b&gt;%3$d&lt;/b&gt;.</string>
    <string name="sys_disable">This is a system component. Do not make changes unless you know what you are doing.</string>
    <!-- The verb (changing) should be at the front of the string -->
    <string name="changing_state">Changing %1$s...</string>
    <string name="state_change_failed">Unable to change the state of %1$s (%2$s).\n\nMost likely, your device does not have root access, which is required.</string>
    <string name="close_help">Close help and return to app</string>
    <string name="enable_long_click">Enable long click</string>
    <string name="disable_all_warning">disable all in this app?</string>
    <string name="disable_all">disable all</string>
</resources>
